# mate-clipboard

./: README.md  meson.build
data/: meson.build  org.mate.panel.ClipmanApplet.mate-panel-applet.desktop.in
po/: LINGUAS  POTFILES  en.po  mate-clipman.pot  meson.build  tr.po
src/: clipman-app.c  clipman-applet.c  clipman-history.c  clipman-item.c  clipman-manager.c  clipman-preferences.c  clipman-storage.c  clipman.h  main.c
